--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<title>CV de Zoe Andresy</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href = "cvex2.css" />
+    <link rel="stylesheet" href = "style.css" />
 </head>
 
 <body>
