--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 			<title>CV Zoe Andresy</title>
     			<meta charset="utf-8"/>
-    			<link rel="stylesheet" href = "styleix2.css"  />
+    			<link rel="stylesheet" href = "style.css"  />
     </head>
     
 <header> 
