--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf8">
 	<meta name="viewport" content="width=initial-width, initial-scale=1">
 	<title>CV Zoe Andresy</title>
-	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
