--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=initial-width, initial-scale=1">
 	<title>CV Zoe Andresy</title>
 	<script src="https://kit.fontawesome.com/5fd6efc4a9.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
